--- a/fakebook-server/src/main/resources/static/pages/socketTest.html
+++ b/fakebook-server/src/main/resources/static/pages/socketTest.html
@@ -9,7 +9,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
 </head>
 <body>
-<noscript><h2 style="color: #ff0000">Seems your browser doesn't support Javascript! Websocket relies on Javascript being enabled. Please enable Javascript and reload this page!</h2></noscript>
+<noscript><h2 style="color: #ff0000">Seems your browser doesn't support Javascript! Websocket relies on Javascript being
+    enabled. Please enable Javascript and reload this page!</h2></noscript>
 <div id="main-content" class="container">
     <div class="row">
         <div class="col-md-6">
@@ -48,8 +49,9 @@
 </div>
 <script>
     var stompClient = null;
+
     const headers = {
-        'Authorization': "Bearer eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJpYXQiOjE2MzAyMjQyMzQsImV4cCI6MTYzMDIyNTEzNCwibmFtZSI6Imppbmt5dWhhbiIsInVzZXJJZCI6ImZhNmZjNjQzLTYxYzYtNDIyMC05MzM1LTI4ZGUzNTI3N2VkNiIsImVtYWlsIjoiZ2tzd2xzcmI5NUBnbWFpbC5jb20ifQ.-nMtvLhvxvK8NVvTQE1gfjXZvfcdyn4mD_yeERGnT7E",
+        'Authorization': "",
     }
 
     function setConnected(connected) {
@@ -57,22 +59,38 @@
         $("#disconnect").prop("disabled", !connected);
         if (connected) {
             $("#conversation").show();
-        }
-        else {
+        } else {
             $("#conversation").hide();
         }
         $("#greetings").html("");
     }
 
-    function connect() {
+    async function connect() {
+
+        const response = await fetch(
+            "http://localhost:8080/api/auth/login",
+            {
+                method: 'POST',
+                headers: {
+                    "Content-Type": "application/json"
+                },
+                body: JSON.stringify({
+                    email: 'gkswlsrb95@gmail.com',
+                    password: '1234'
+                }),
+                credentials: "same-origin"
+            }
+        )
+        const res = await response.json();
+        headers.Authorization = "Bearer " + res.data.accessToken.encodedJwt;
+
+        // SockJS와 stomp client를 통해 연결을 시도.
         var socket = new SockJS('/ws');
         stompClient = Stomp.over(socket);
-        // SockJS와 stomp client를 통해 연결을 시도.
-
         stompClient.connect(headers, function (frame) {
             setConnected(true);
             console.log('Connected: ' + frame);
-            stompClient.subscribe('/sub/test', function (greeting) {
+            stompClient.subscribe('/sub/chatroom/1', function (greeting) {
                 showGreeting(JSON.parse(greeting.body).content);
             }, headers);
         });
@@ -80,7 +98,8 @@
 
     function disconnect() {
         if (stompClient !== null) {
-            stompClient.disconnect(() => {}, headers);
+            stompClient.disconnect(() => {
+            }, headers);
         }
         setConnected(false);
         console.log("Disconnected");
@@ -88,7 +107,9 @@
 
     function sendName() {
         // /app/hello로 JSON 파라미터를 메세지 body로 전송.
-        stompClient.send("/pub/chat_message", headers, JSON.stringify({'content': $("#name").val()}));
+        stompClient.send("/pub/chat_message", headers, JSON.stringify({
+            'content': $("#name").val()
+        }));
     }
 
     function showGreeting(message) {
@@ -99,9 +120,15 @@
         $("form").on('submit', function (e) {
             e.preventDefault();
         });
-        $( "#connect" ).click(function() { connect(); });
-        $( "#disconnect" ).click(function() { disconnect(); });
-        $( "#send" ).click(function() { sendName(); });
+        $("#connect").click(function () {
+            connect();
+        });
+        $("#disconnect").click(function () {
+            disconnect();
+        });
+        $("#send").click(function () {
+            sendName();
+        });
     });
 </script>
 </body>
